// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroSection > renders default as expected 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[865px] mt-[82px] py-28"
    />
  </div>
</div>
`;

exports[`HeroSection > renders with optional args 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[865px] mt-[82px] py-28"
    >
      <h1
        class="hero-section__title text-on-dark text-center"
      >
        This is the title
      </h1>
      <h2
        class="hero-section__subtitle text-on-dark text-2xl font-[400] text-center mt-4"
      >
        This is the subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with optional yield 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[865px] mt-[82px] py-28"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;
